--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@simplewebauthn/server": "^10.0.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
